@@ -2,6 +2,7 @@ gscan2pdf (2.0.3-1) unstable; urgency=low
 
   * New upstream release
     Closes: #893026 (Preview pane does not update)
+    Closes: #893024 (Manual entry into UI date widget is broken)
 
  --
 
