@@ -2,6 +2,8 @@
 
 * Always update image viewer if page selection changes
   Closes Debian bug #893026 (Preview pane does not update)
+* Fixed manually typing date in metadata dialog (again)
+  Closes Debian bug #893024 (Manual entry into UI date widget is broken)
 
 
 2.0.2 (26.03.2018):
